Edit Form and Table
- Form : edit font-size
- Table : Refactoring

--- a/examples/list.html
+++ b/examples/list.html
@@ -14,37 +14,37 @@
 <body>
 
 	<div class="container">
-		<ul>
+		<ul style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ol class="none">
+		<ol class="none" style="margin-top: 20px;">
 		  <li class="active">Lorem ipsum sit amet !</li>
 		  <li>Lorem dolor amet !</li>
 		  <li>Lorem ipsum dolor sit amet !</li>
 		</ol>
 
-		<ol class="border">
+		<ol class="border" style="margin-top: 20px;">
 		  <li>Lorem ipsum sit amet !</li>
 		  <li>Lorem dolor amet !</li>
 		  <li>Lorem ipsum dolor sit amet !</li>
 		</ol>
 
-		<ul class="border info">
+		<ul class="border info" style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ul class="border success">
+		<ul class="border success" style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ul class="boxed">
+		<ul class="boxed" style="margin-top: 20px;">
 			<li class="active">Lorem ipsum dolor sit amet</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
