--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<li><a href="examples/form.html">Form</a></li>
 			<li><a href="examples/table.html">Table</a></li>
 			<li><a href="examples/utility.html">Utility</a></li>
+			<li><a href="examples/badge.html">Badge</a></li>
 		</ul>
 	</div>
 
