Padding value + Button + Badge + BlockQuote
- Change padding variable for brut value.
- Add small and large for button + edit example
- Reduce badge size
- Add boxed BlockQuote + edit example

--- a/examples/blockquote.html
+++ b/examples/blockquote.html
@@ -21,6 +21,14 @@
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ex, blanditiis consectetur asperiores nam assumenda eligendi totam incidunt minus, nobis corporis! Atque adipisci mollitia necessitatibus distinctio consequuntur eos inventore dicta.</em></p>
 		</blockquote>
 
+		<blockquote class="boxed success">
+		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem! Boxed</em></p>
+		</blockquote>
+
+		<blockquote class="boxed">
+		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem! Boxed</em></p>
+		</blockquote>
+
 		<blockquote class="border success">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
