--- a/examples/button.html
+++ b/examples/button.html
@@ -10,6 +10,10 @@
 
 	<div style="margin: 10px;">
 		<button class="btn error">My Button</button>
+
+		<button class="btn info small">My Button</button>
+
+		<button class="btn info large">My Button</button>
 		
 		<a href="#" class="btn clear shadow">My Button</a>
 		
@@ -25,7 +29,7 @@
 		
 		<input type="submit" class="btn rounded" value="My Button">
 		
-		<input type="submit" class="btn rounded success" value="My Button">
+		<input type="submit" class="btn rounded success small" value="My Button">
 		
 		<a href="#" class="btn success">My Button</a>
 		
