Add progress bar
- Progress bar + Exemple

--- a/examples/button.html
+++ b/examples/button.html
@@ -34,6 +34,8 @@
 		<a href="#" class="btn success">My Button</a>
 		
 		<a href="#" class="btn border-rounded success">My Button</a>
+
+		<a href="#" class="btn border-rounded info large">My Button</a>
 	</div>
 
 </body>
