Utilities + Alert + List
- Add utilities
- Darken text color for Alert
- Darlen border color for list

--- a/examples/list.html
+++ b/examples/list.html
@@ -21,7 +21,7 @@
 		</ul>
 
 		<ol class="none" style="margin-top: 20px;">
-		  <li class="active">Lorem ipsum sit amet !</li>
+		  <li>Lorem ipsum sit amet !</li>
 		  <li>Lorem dolor amet !</li>
 		  <li>Lorem ipsum dolor sit amet !</li>
 		</ol>
@@ -40,6 +40,12 @@
 
 		<ul class="border success" style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
+			<li>Lorem dolor amet !</li>
+			<li>Lorem ipsum dolor sit amet !</li>
+		</ul>
+
+		<ul class="boxed" style="margin-top: 20px;">
+			<li>Lorem ipsum dolor sit amet</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
