Add icons exemple + a color + Edit margin
- Add icons exemple
- Change color for <a>
- Edit margin for alert and heading

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<li><a href="examples/utility.html">Utility</a></li>
 			<li><a href="examples/badge.html">Badge</a></li>
 			<li><a href="examples/progressbar.html">Progress Bar</a></li>
+			<li><a href="examples/icon.html">Use icons</a></li>
 		</ul>
 	</div>
 
