Alert size + Grid responsive + Button gradient
- Add Alert size
- Grid responsive
- Button gradient

--- a/examples/alert.html
+++ b/examples/alert.html
@@ -22,8 +22,8 @@
 			Hello, this is an alert ! :)
 		</div>
 
-		<div class="alert info">
-			Hello, this is an alert ! :)
+		<div class="alert info large">
+			Hello, this is an alert ! :) (large)
 		</div>
 
 		<div class="alert white">
@@ -32,6 +32,10 @@
 
 		<div class="alert clear shadow">
 			Hello, this is an alert ! :)
+		</div>
+
+		<div class="alert success small">
+			Hello, this is an alert ! :) (small)
 		</div>
 	</div>
 
