--- a/examples/button.html
+++ b/examples/button.html
@@ -11,6 +11,8 @@
 	<div style="margin: 10px;">
 		<button class="btn error">My Button</button>
 
+		<button class="btn gradient large rounded">My Button</button>
+
 		<button class="btn info small">My Button</button>
 
 		<button class="btn info large">My Button</button>
