--- a/examples/grid.html
+++ b/examples/grid.html
@@ -9,8 +9,9 @@
 <body>
 
 	<div class="container">
-		<div class="col-l-4" style="background-color: red; height: 100px;">
+		<div class="col-m-8" style="background-color: red; height: 100px;">
 			<div class="col-l-4" style="background-color: blue; height: 100px;"></div>
+			<div class="col-l-8" style="background-color: green; height: 100px;"></div>
 		</div>
 	</div>
 </body>
