--- a/examples/progressbar.html
+++ b/examples/progressbar.html
@@ -23,6 +23,10 @@
 		</div>
 
 		<div class="progress">
+			<div class="progress-fill gradient rounded" style="width: 58%;">58%</div>
+		</div>
+
+		<div class="progress">
 			<div class="progress-fill error" style="width: 65%;">65%</div>
 		</div>
 
