--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<li><a href="examples/badge.html">Badge</a></li>
 			<li><a href="examples/progressbar.html">Progress Bar</a></li>
 			<li><a href="examples/icon.html">Use icons</a></li>
+			<li><a href="examples/card.html">Card</a></li>
 		</ul>
 	</div>
 
