--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
-<style type="text/css">
-		a{
-			color: #606c76;
-		}
-	</style>
-<body>
-
 <div class="container">
 
 	<div>
 		<ul class="boxed">
+			<li class="active"><b>minstyle.io Examples :</b></li>
 			<li><a href="examples/grid.html">Grid</a></li>
 			<li><a href="examples/button.html">Button</a></li>
 			<li><a href="examples/blockquote.html">Blockquote</a></li>
@@ -31,6 +25,7 @@
 			<li><a href="examples/progressbar.html">Progress Bar</a></li>
 			<li><a href="examples/icon.html">Use icons</a></li>
 			<li><a href="examples/card.html">Card</a></li>
+			<li><a href="examples/menu.html">Menu</a></li>
 		</ul>
 	</div>
 
