--- a/examples/grid.html
+++ b/examples/grid.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div class="container">
-		<div class="col-m-12 no-padding" style="background-color: red; height: 100px;">
+		<div class="col-m-12 col-s-12" style="background-color: red; height: 100px;">
 			<div class="col-m-2" style="background-color: blue; height: 100px;"></div>
 			<div class="col-m-2" style="background-color: green; height: 100px;"></div>
 			<div class="col-m-2" style="background-color: yellow; height: 100px;"></div>
