Refactor names class
Refactor names class

--- a/examples/alert.html
+++ b/examples/alert.html
@@ -10,32 +10,32 @@
 
 	<div class="container" style="margin-top: 20px">
 
-		<div class="alert">
-			Hello, this is an alert ! :)
+		<div class="ms-alert">
+			Hello, this is an ms-alert ! :)
 		</div>
 
-		<div class="alert error">
-			Hello, this is an alert ! :)
+		<div class="ms-alert ms-red">
+			Hello, this is an ms-alert ! :)
 		</div>
 
-		<div class="alert success">
-			Hello, this is an alert ! :)
+		<div class="ms-alert ms-green">
+			Hello, this is an ms-alert ! :)
 		</div>
 
-		<div class="alert info large">
-			Hello, this is an alert ! :) (large)
+		<div class="ms-alert ms-blue ms-large">
+			Hello, this is an ms-alert ! :) (large)
 		</div>
 
-		<div class="alert white">
-			Hello, this is an alert ! :)
+		<div class="ms-alert ms-white">
+			Hello, this is an ms-alert ! :)
 		</div>
 
-		<div class="alert clear shadow">
-			Hello, this is an alert ! :)
+		<div class="ms-alert ms-clear ms-shadow">
+			Hello, this is an ms-alert ! :)
 		</div>
 
-		<div class="alert success small">
-			Hello, this is an alert ! :) (small)
+		<div class="ms-alert ms-success ms-small">
+			Hello, this is an ms-alert ! :) (small)
 		</div>
 	</div>
 
