--- a/examples/badge.html
+++ b/examples/badge.html
@@ -9,16 +9,16 @@
 <body>
 
 	<div class="container" style="margin-top: 20px">
-		<h1>Test <span class="badge">New</span></h1>
-		<h2>Test <span class="badge rounded info">New</span></h2>
-		<h3>Test <span class="badge">New</span></h3>
-		<h5>Test <span class="badge success">New</span></h5>
-		<h6>Test <span class="badge error">New</span></h6>
+		<h1>Test <span class="ms-badge">New</span></h1>
+		<h2>Test <span class="ms-badge ms-rounded ms-blue">New</span></h2>
+		<h3>Test <span class="ms-badge">New</span></h3>
+		<h5>Test <span class="ms-badge ms-green">New</span></h5>
+		<h6>Test <span class="ms-badge ms-red">New</span></h6>
 
 		<br/>
 		<br/>
 
-		<a href="#" class="btn success">Notifications <span class="badge white">3</span></a>
+		<a href="#" class="ms-btn ms-green">Notifications <span class="ms-badge ms-white">3</span></a>
 
 		<br/>
 		<br/>
