--- a/examples/blockquote.html
+++ b/examples/blockquote.html
@@ -13,39 +13,39 @@
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo laudantium consectetur fugit, dolore similique excepturi tenetur rem ex harum impedit accusamus veniam, facilis cumque obcaecati ducimus aut tempore quasi praesentium.</em></p>
 		</blockquote>
 
-		<blockquote class="border">
+		<blockquote class="ms-border">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis vel nobis ex, ullam incidunt, id esse quo! Odit nobis facilis animi, quia laudantium consequatur sint quam excepturi distinctio consequuntur. Vero.</em></p>
 		</blockquote>
 
-		<blockquote class="border error">
+		<blockquote class="ms-border ms-red">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ex, blanditiis consectetur asperiores nam assumenda eligendi totam incidunt minus, nobis corporis! Atque adipisci mollitia necessitatibus distinctio consequuntur eos inventore dicta.</em></p>
 		</blockquote>
 
-		<blockquote class="boxed success">
+		<blockquote class="ms-boxed ms-green">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem! Boxed</em></p>
 		</blockquote>
 
-		<blockquote class="boxed">
+		<blockquote class="ms-boxed">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem! Boxed</em></p>
 		</blockquote>
 
-		<blockquote class="border success">
+		<blockquote class="ms-border ms-green">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
 
-		<blockquote class="border-white">
+		<blockquote class="ms-border-white">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
 
-		<blockquote class="border-white success">
+		<blockquote class="ms-border-white ms-green">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
 
-		<blockquote class="border-white info">
+		<blockquote class="ms-border-white ms-blue">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
 
-		<blockquote class="border-white error shadow">
+		<blockquote class="ms-border-white ms-red ms-shadow">
 		  <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, adipisci eveniet error molestias itaque tempore ratione aspernatur rerum inventore ut eligendi at vitae in, minima, tempora excepturi et, facilis rem!</em></p>
 		</blockquote>
 	</div>
