--- a/examples/button.html
+++ b/examples/button.html
@@ -9,35 +9,35 @@
 <body>
 
 	<div style="margin: 10px;">
-		<button class="btn error">My Button</button>
+		<button class="ms-btn ms-red">My Button</button>
 
-		<button class="btn gradient large rounded">My Button</button>
+		<button class="ms-btn ms-gradient ms-large ms-rounded">My Button</button>
 
-		<button class="btn info small">My Button</button>
+		<button class="ms-btn ms-blue ms-small">My Button</button>
 
-		<button class="btn info large">My Button</button>
+		<button class="ms-btn ms-blue ms-large">My Button</button>
 		
-		<a href="#" class="btn clear shadow">My Button</a>
+		<a href="#" class="ms-btn ms-clear ms-shadow">My Button</a>
 		
-		<a href="#" class="btn clear error">My Button</a>
+		<a href="#" class="ms-btn ms-clear ms-red">My Button</a>
 		
-		<input type="submit" class="btn border error" value="My Button">
+		<input type="submit" class="ms-btn ms-border ms-blue" value="My Button">
 		
-		<input type="submit" class="btn border success" value="My Button">
+		<input type="submit" class="ms-btn ms-border ms-green" value="My Button">
 		
-		<input type="submit" class="btn border-bottom" value="My Button">
+		<input type="submit" class="ms-btn ms-border-bottom" value="My Button">
 		
-		<input type="submit" class="btn border-bottom success" value="My Button">
+		<input type="submit" class="ms-btn ms-border-bottom ms-green" value="My Button">
 		
-		<input type="submit" class="btn rounded" value="My Button">
+		<input type="submit" class="ms-btn ms-rounded" value="My Button">
 		
 		<input type="submit" class="btn rounded success small" value="My Button">
 		
-		<a href="#" class="btn success">My Button</a>
+		<a href="#" class="ms-btn ms-green">My Button</a>
 		
-		<a href="#" class="btn border-rounded success">My Button</a>
+		<a href="#" class="ms-btn ms-border-rounded ms-green">My Button</a>
 
-		<a href="#" class="btn border-rounded info large">My Button</a>
+		<a href="#" class="ms-btn ms-border-rounded ms-blue ms-large">My Button</a>
 	</div>
 
 </body>
