--- a/examples/heading.html
+++ b/examples/heading.html
@@ -24,10 +24,10 @@
 		<br/>
 		<br/>
 
-		<h1 class="highlighted">Heading</h1>
-		<h2 class="highlighted error">Heading</h2>
-		<h3 class="highlighted success">Heading</h3>
-		<h4 class="highlighted info">Heading</h4>
+		<h1 class="ms-highlighted">Heading</h1>
+		<h2 class="ms-highlighted ms-red">Heading</h2>
+		<h3 class="ms-highlighted ms-green">Heading</h3>
+		<h4 class="ms-highlighted ms-blue">Heading</h4>
 	</div>
 </body>
 </html>
