--- a/examples/list.html
+++ b/examples/list.html
@@ -20,38 +20,38 @@
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ol class="none" style="margin-top: 20px;">
+		<ol class="ms-none" style="margin-top: 20px;">
 		  <li>Lorem ipsum sit amet !</li>
 		  <li>Lorem dolor amet !</li>
 		  <li>Lorem ipsum dolor sit amet !</li>
 		</ol>
 
-		<ol class="border" style="margin-top: 20px;">
+		<ol class="ms-border" style="margin-top: 20px;">
 		  <li>Lorem ipsum sit amet !</li>
 		  <li>Lorem dolor amet !</li>
 		  <li>Lorem ipsum dolor sit amet !</li>
 		</ol>
 
-		<ul class="border info" style="margin-top: 20px;">
+		<ul class="ms-border ms-blue" style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ul class="border success" style="margin-top: 20px;">
+		<ul class="ms-border ms-green" style="margin-top: 20px;">
 			<li>Lorem ipsum sit amet !</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ul class="boxed" style="margin-top: 20px;">
+		<ul class="ms-boxed" style="margin-top: 20px;">
 			<li>Lorem ipsum dolor sit amet</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
 
-		<ul class="boxed" style="margin-top: 20px;">
-			<li class="active">Lorem ipsum dolor sit amet</li>
+		<ul class="ms-boxed" style="margin-top: 20px;">
+			<li class="ms-active">Lorem ipsum dolor sit amet</li>
 			<li>Lorem dolor amet !</li>
 			<li>Lorem ipsum dolor sit amet !</li>
 		</ul>
