--- a/examples/table.html
+++ b/examples/table.html
@@ -18,13 +18,13 @@
   <div class="container" style="maring-top: 20px;">
 
     <table>
-      <tr class="title">
+      <tr class="ms-title">
         <th>Entry Header 1</th>
         <th>Entry Header 2</th>
         <th>Entry Header 3</th>
         <th>Entry Header 4</th>
       </tr>
-      <tr class="fill">
+      <tr class="ms-fill">
         <td>Entry First Line 1</td>
         <td>Entry First Line 2</td>
         <td>Entry First Line 3</td>
@@ -36,7 +36,7 @@
         <td>Entry Line 3</td>
         <td>Entry Line 4</td>
       </tr>
-      <tr class="fill">
+      <tr class="ms-fill">
         <td>Entry Last Line 1</td>
         <td>Entry Last Line 2</td>
         <td>Entry Last Line 3</td>
@@ -45,7 +45,7 @@
     </table>
 
     <table>
-      <tr class="title">
+      <tr class="ms-title">
         <th>Firstname</th>
         <th>Lastname</th> 
         <th>Age</th>
