--- a/examples/progressbar.html
+++ b/examples/progressbar.html
@@ -10,37 +10,37 @@
 
 	<div class="container">
 		
-		<div class="progress">
-			<div class="progress-fill" style="width: 42%;">42%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill" style="width: 42%;">42%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill info" style="width: 23%;">23%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-blue" style="width: 23%;">23%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill success rounded" style="width: 88%;">88%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-green rms-ounded" style="width: 88%;">88%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill gradient rounded" style="width: 58%;">58%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-gradient ms-rounded" style="width: 58%;">58%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill error" style="width: 65%;">65%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-red" style="width: 65%;">65%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill info" style="width: 65%;">65%</div>
-			<div class="progress-fill" style="width: 35%;">35%</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-blue" style="width: 65%;">65%</div>
+			<div class="ms-progress-fill" style="width: 35%;">35%</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill success rounded striped" style="width: 67%;">Loading...</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-green ms-rounded ms-striped" style="width: 67%;">Loading...</div>
 		</div>
 
-		<div class="progress">
-			<div class="progress-fill error rounded striped" style="width: 12%;">Cancel...</div>
+		<div class="ms-progress">
+			<div class="ms-progress-fill ms-red ms-rounded ms-striped" style="width: 12%;">Cancel...</div>
 		</div>
 
 	</div>
