--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="container">
 
 	<div>
-		<ul class="boxed">
-			<li class="active"><b>minstyle.io Examples :</b></li>
+		<ul class="ms-boxed">
+			<li class="ms-active"><b>minstyle.io Examples :</b></li>
 			<li><a href="examples/grid.html">Grid</a></li>
 			<li><a href="examples/button.html">Button</a></li>
 			<li><a href="examples/blockquote.html">Blockquote</a></li>
