Fix btn color menu
Fix btn color menu

--- a/examples/menu.html
+++ b/examples/menu.html
@@ -42,7 +42,7 @@
       <br/>
       <div class="ms-menu ms-green ms-vertical">
           <ul>
-              <li class="active"><a href="#"><i class="fas fa-h-square"></i> Home</a></li>
+              <li class="ms-active"><a href="#"><i class="fas fa-h-square"></i> Home</a></li>
               <li><a href="#">Doc</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Live</a></li>
