New features - blockquote, list + index
- New features on blockquote & list
- New example main page

--- a/examples/alert.html
+++ b/examples/alert.html
@@ -66,7 +66,8 @@
 </div></code></pre>
 			</div>
 		</div>
-
+		
+		<!-- ALERT BLUE -->
 		<div class="row">
 			<div class="col-s-12">
 				<div class="ms-alert ms-blue ms-large">
@@ -83,6 +84,7 @@
 			</div>
 		</div>	
 
+		<!-- ALERT WHITE -->
 		<div class="row">
 			<div class="col-s-12">
 				<div class="ms-alert ms-white">
@@ -99,9 +101,10 @@
 			</div>
 		</div>
 
+		<!-- ALERT SMALL -->
 		<div class="row">
 			<div class="col-s-12">
-				<div class="ms-alert ms-success ms-small">
+				<div class="ms-alert ms-green ms-small">
 					<b>Small alert</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere modi molestias ipsum! Libero magni ullam quam aut repellendus nobis amet cumque odit ea asperiores dignissimos soluta sapiente, blanditiis, quaerat minus.
 				</div>
 			</div>
@@ -113,15 +116,16 @@
 			</div>
 		</div>
 
+		<!-- ALERT CLEAR -->
 		<div class="row">
 			<div class="col-s-12">
-				<div class="ms-alert ms-success ms-clear">
+				<div class="ms-alert ms-clear">
 					<b>Clear</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere modi molestias ipsum! Libero magni ullam quam aut repellendus nobis amet cumque odit ea asperiores dignissimos soluta sapiente, blanditiis, quaerat minus.
 				</div>
 			</div>
 
 			<div class="col-s-12">
-				<pre><code class="language-html"><div class="ms-alert ms-success ms-clear">
+				<pre><code class="language-html"><div class="ms-alert ms-clear">
 	<b>Clear</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere modi molestias ipsum! Libero magni ullam quam aut repellendus nobis amet cumque odit ea asperiores dignissimos soluta sapiente, blanditiis, quaerat minus.
 </div></code></pre>
 			</div>
