New feature - Heading
- Added favicon
- Added back link for example pages
- New features on Heading

--- a/examples/blockquote.html
+++ b/examples/blockquote.html
@@ -17,7 +17,7 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: 20px;">
-			<h1>Blockquote - Example</h1>
+			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Blockquote - Example</h1>
 		</div>
 
 		<div class="row">
