--- a/examples/alert.html
+++ b/examples/alert.html
@@ -17,7 +17,7 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: 20px;">
-			<h1>Alert - Example</h1>
+			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Alert - Example</h1>
 		</div>
 
 		<!-- ALERT GRAY -->
