--- a/examples/grid.html
+++ b/examples/grid.html
@@ -27,7 +27,7 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: 20px;">
-			<h1>Grid - Example</h1>
+			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Grid - Example</h1>
 		</div>
 		
 		<div class="row">
