New feature - Badge
- Added favicon
- New features on Badge
- Changes on grid example

--- a/examples/alert.html
+++ b/examples/alert.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Alert - Exemple</title>
-	
+	<link rel="icon" href="img/favicon.ico" />
+
 	<link rel="stylesheet" href="../css/minstyle.io.css">
 	<link rel="stylesheet" href="css/prism.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -66,7 +67,7 @@
 </div></code></pre>
 			</div>
 		</div>
-		
+
 		<!-- ALERT BLUE -->
 		<div class="row">
 			<div class="col-s-12">
@@ -82,7 +83,7 @@
 	<b>Large alert</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit...
 </div></code></pre>
 			</div>
-		</div>	
+		</div>
 
 		<!-- ALERT WHITE -->
 		<div class="row">
@@ -141,6 +142,6 @@
 		el.text(el.html());
 		});
 	</script>
-	
+
 </body>
 </html>
