--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>minstyle.io - Exemple</title>
-	
+	<link rel="icon" href="examples/img/favicon.ico" />
+
 	<link rel="stylesheet" href="css/minstyle.io.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<link rel="stylesheet" href="examples/css/style.css">
@@ -33,9 +34,9 @@
 			<li><a href="examples/progressbar.html">Progress Bar</a></li>
 			<li><a href="examples/card.html">Card</a></li>
 			<li><a href="examples/menu.html">Menu</a></li>
-		</ul>		
+		</ul>
 
 	</div><!-- /container -->
-	
+
 </body>
 </html>
