--- a/examples/badge.html
+++ b/examples/badge.html
@@ -3,26 +3,86 @@
 <head>
 	<meta charset="utf-8">
 	<title>Badge - Exemple</title>
+	<link rel="icon" href="img/favicon.ico" />
+
 	<link rel="stylesheet" href="../css/minstyle.io.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="css/prism.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 <body>
+	<header class="header">
+		<img src="img/logo.png" alt="Logo" class="logo">
+	</header>
 
-	<div class="container" style="margin-top: 20px">
-		<h1>Test <span class="ms-badge">New</span></h1>
-		<h2>Test <span class="ms-badge ms-rounded ms-blue">New</span></h2>
-		<h3>Test <span class="ms-badge">New</span></h3>
-		<h5>Test <span class="ms-badge ms-green">New</span></h5>
-		<h6>Test <span class="ms-badge ms-red">New</span></h6>
+	<div class="container">
+		<div class="row" style="margin-bottom: 20px;">
+			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Badge - Example</h1>
+		</div>
 
-		<br/>
-		<br/>
+		<div class="row">
+			<div class="col-s-12">
+				<h1>Test <span class="ms-badge-title">New</span></h1>
+				<h2>Test <span class="ms-badge-title ms-blue">New</span></h2>
+				<h3>Test <span class="ms-badge-title ms-white">New</span></h3>
+				<h5>Test <span class="ms-badge-title ms-green"><i class="far fa-check-circle"></i> New</span></h5>
+				<h6>Test <span class="ms-badge-title ms-red"><i class="fas fa-exclamation-circle"></i> New</span></h6>
+			</div>
 
-		<a href="#" class="ms-btn ms-green">Notifications <span class="ms-badge ms-white">3</span></a>
+			<div class="col-s-12">
+					<pre><code class="language-html"><h1>Test <span class="ms-badge-title">New</span></h1>
+<h2>Test <span class="ms-badge-title ms-rounded ms-blue">New</span></h2>
+<h3>Test <span class="ms-badge-title ms-white">New</span></h3>
+<h5>Test <span class="ms-badge-title ms-green">New</span></h5>
+<h6>Test <span class="ms-badge-title ms-red">New</span></h6></code></pre>
+			</div>
+		</div>
 
-		<br/>
-		<br/>
-	</div>
+		<div class="row">
+			<div class="col-s-12">
+				<h1>Test <span class="ms-badge-title ms-rounded">New</span></h1>
+				<h2>Test <span class="ms-badge-title ms-rounded ms-blue">New</span></h2>
+				<h3>Test <span class="ms-badge-title ms-rounded ms-white">New</span></h3>
+				<h5>Test <span class="ms-badge-title ms-rounded ms-green">New</span></h5>
+				<h6>Test <span class="ms-badge-title ms-rounded ms-red">New</span></h6>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><h1>Test <span class="ms-badge-title ms-rounded">New</span></h1>
+<h2>Test <span class="ms-badge-title ms-rounded ms-blue">New</span></h2>
+<h3>Test <span class="ms-badge-title ms-rounded ms-white">New</span></h3>
+<h5>Test <span class="ms-badge-title ms-rounded ms-green">New</span></h5>
+<h6>Test <span class="ms-badge-title ms-rounded ms-red">New</span></h6></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<h2>Test <span class="ms-badge-title ms-border ms-blue">New</span></h2>
+				<h3>Test <span class="ms-badge-title ms-border ms-white">New</span></h3>
+				<h5>Test <span class="ms-badge-title ms-border ms-green">New</span></h5>
+				<h6>Test <span class="ms-badge-title ms-border ms-red"><b>New</b></span></h6>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><h2>Test <span class="ms-badge-title ms-border ms-blue">New</span></h2>
+<h3>Test <span class="ms-badge-title ms-border ms-white">New</span></h3>
+<h5>Test <span class="ms-badge-title ms-border ms-green">New</span></h5>
+<h6>Test <span class="ms-badge-title ms-border ms-red"><b>New</b></span></h6></code></pre>
+			</div>
+		</div>
+
+	</div><!-- /container -->
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/prism.js"></script>
+	<script type="text/javascript">
+		$('code').each(function(){
+		var el = $(this);
+		el.text(el.html());
+		});
+	</script>
 
 </body>
 </html>
