--- a/examples/button.html
+++ b/examples/button.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Button - Exemple</title>
-	
+	<link rel="icon" href="img/favicon.ico" />
+
 	<link rel="stylesheet" href="../css/minstyle.io.css">
 	<link rel="stylesheet" href="css/prism.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -108,6 +109,6 @@
 		el.text(el.html());
 		});
 	</script>
-	
+
 </body>
 </html>
