--- a/examples/grid.html
+++ b/examples/grid.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Grid - Exemple</title>
-	
+	<link rel="icon" href="img/favicon.ico" />
+
 	<link rel="stylesheet" href="../css/minstyle.io.css">
 	<link rel="stylesheet" href="css/prism.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -12,11 +13,11 @@
 
 	<style>
 		.col-s-2{
-			background-color: gray;
-			color: #fff;
+			background-color: #f2f2f2;
+			color: #434343;
 			height: 40px;
 			line-height: 40px;
-			border: 1px solid black;
+			border: 1px solid #adb5bd;
 		}
 	</style>
 </head>
@@ -29,7 +30,7 @@
 		<div class="row" style="margin-bottom: 20px;">
 			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Grid - Example</h1>
 		</div>
-		
+
 		<div class="row">
 			<div class="col-s-12">
 				<div class="col-s-2 col-m-4 col-l-6">.col-s-2 .col-m-4 .col-l-6</div>
@@ -61,6 +62,6 @@
 		el.text(el.html());
 		});
 	</script>
-	
+
 </body>
 </html>
