New feature - Card
- New features on Card
- Add no margin on btn
- Add content style

--- a/examples/button.html
+++ b/examples/button.html
@@ -99,6 +99,17 @@
 <button class="ms-btn ms-rounded ms-green"><i class="fas fa-laugh-squint"></i> Use icons</button></code></pre>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<button class="ms-btn ms-rounded ms-blue no-margin">No margin</button>
+			</div>
+
+			<div class="col-s-12">
+				<pre>
+<code class="language-html"><button class="ms-btn ms-rounded ms-blue no-margin">No margin</button></code></pre>
+			</div>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
