--- a/examples/progressbar.html
+++ b/examples/progressbar.html
@@ -166,13 +166,13 @@
 		<div class="row">
 			<div class="col-s-12">
 				<div class="ms-progress ms-rounded">
-					<div class="ms-progress-fill ms-green ms-rounded" style="width: 23%;">Large</div>
+					<div class="ms-progress-fill ms-green ms-rounded" style="width: 23%;">Rounded</div>
 				</div>
 			</div>
 
 			<div class="col-s-12">
 				<pre><code class="language-html"><div class="ms-progress ms-rounded">
-	<div class="ms-progress-fill ms-green ms-rounded" style="width: 23%;">Large</div>
+	<div class="ms-progress-fill ms-green ms-rounded" style="width: 23%;">Rounded</div>
 </div></code></pre>
 			</div>
 		</div>
